# RL-Benchmarking-Schema

./: .gitignore  LICENSE  README.md  config.json  config.py  config_cyfronet.json  main.py  pyproject.toml  submit_jobs.py  visualize.py
experiments/: exp1.json  policy_swap.json
src/: runner.py
src/algorithms/: __init__.py  base.py  base_schema.py
src/algorithms/variants/: simple_ac.py
src/policies/: __init__.py  base.py
src/policies/variants/: separated_mlp.py
src/utils/: callbacks.py  config_loader.py
