[project]
name = "rl-benchmarking-schema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d,classic-control]>=1.2.2",
    "ipykernel>=7.1.0",
    "opencv-python>=4.12.0.88",
    "stable-baselines3>=2.7.1",
    "swig>=4.4.0",
    "tensorboard>=2.20.0",
    "wandb>=0.24.0",
]
